--- a/Language/Functions/Advanced IO/noTone.adoc
+++ b/Language/Functions/Advanced IO/noTone.adoc
@@ -1,5 +1,5 @@
 ---
-标题title: noTone()
+标题: noTone()
 扩展标题: ""
 分类: [ "功能" ]
 子分类: [ "高级输入/输出" ]
@@ -25,6 +25,7 @@ aliases: [ /language/functions/advanced-io/noTone/ ]
 === 描述
 === Description
 停止由`tone()`触发的方波的生成。如果没有tone生成，则没有效果。
+[%hardbreaks]
 Stops the generation of a square wave triggered by `tone()`. Has no effect if no tone is being generated.
 [%hardbreaks]
 
@@ -39,6 +40,7 @@ Stops the generation of a square wave triggered by `tone()`. Has no effect if no
 === 参数
 === Parameters
 `pin`: 用来停止生成tone的Arduino引脚编号。
+[%hardbreaks]
 `pin`: the Arduino pin on which to stop generating the tone.
 
 [float]
@@ -61,6 +63,7 @@ Nothing
 === 通知&警告
 === Notes and Warnings
 如果您想在多个引脚上播放不同的音高，则需要在一个引脚上调用`noTone()'，然后在下一个引脚上调用`tone()'。
+[%hardbreaks]
 If you want to play different pitches on multiple pins, you need to call `noTone()` on one pin before calling `tone()` on the next pin.
 [%hardbreaks]
 
