--- a/Language/Functions/Advanced IO/pulseIn.adoc
+++ b/Language/Functions/Advanced IO/pulseIn.adoc
@@ -3,7 +3,11 @@
 分类: [ "功能" ]
 子标题: [ "高级 输入/输出" ]
 ---
-
+---
+title: pulseIn()
+categories: [ "Functions" ]
+subCategories: [ "Advanced I/O" ]
+---
 
 
 
@@ -17,30 +21,40 @@
 
 [float]
 === 描述
+=== Description
 从一个引脚读取脉冲(无论`HIGH`还是`LOW`)。 例如， 如果值是`HIGH`， `pulseIn()`等待引脚从`LOW`变为`HIGH`，开始计时，然后等待引脚变为`LOW`并停止计时。 返回脉冲长度（毫秒数）或者返回0如果在超时时间内没有接收到完整的脉冲（放弃了）。
+Reads a pulse (either `HIGH` or `LOW`) on a pin. For example, if `value` is `HIGH`, `pulseIn()` waits for the pin to go from `LOW` to `HIGH`, starts timing, then waits for the pin to go `LOW` and stops timing. Returns the length of the pulse in microseconds or gives up and returns 0 if no complete pulse was received within the timeout.
 
 这个函数的时间是个经验值，如果超长，将可能显示错误。 支持10毫秒到3分钟长度的脉冲。
+The timing of this function has been determined empirically and will probably show errors in longer pulses. Works on pulses from 10 microseconds to 3 minutes in length.
 
 注意：如果设置了可选的timeout参数，代码会执行得更快。
+NOTE:  if the optional timeout is used code will execute faster.
 [%hardbreaks]
 
 
 [float]
 === 句法
+=== Syntax
 `pulseIn(pin, value)` +
 `pulseIn(pin, value, timeout)`
 
 
 [float]
 === 参数
+=== Parameters
 `pin`: 你想读取脉冲的Arduino引脚编号。允许的数据类型: `int`. +
+`pin`: the number of the Arduino pin on which you want to read the pulse. Allowed data types: `int`. +
 `value`: 脉冲读取类型: 无论链接:../../../variables/constants/constants[HIGH]还是链接:../../../variables/constants/constants[LOW]。允许的数据类型: `int`。 +
+`value`: type of pulse to read: either link:../../../variables/constants/constants[HIGH] or link:../../../variables/constants/constants[LOW]. Allowed data types: `int`. +
 `timeout` (可选): 等待脉冲启动的毫秒数； 默认为1秒。 允许的数据类型: `unsigned long`。
-
+`timeout` (optional): the number of microseconds to wait for the pulse to start; default is one second. Allowed data types: `unsigned long`.
 
 [float]
 === 返回值
+=== Returns
 脉冲长度 (毫秒) ，或者0如果在超时前没有启动脉冲的话。数据类型: `unsigned long`.
+The length of the pulse (in microseconds) or 0 if no pulse started before the timeout. Data type: `unsigned long`.
 
 --
 // OVERVIEW SECTION ENDS
@@ -54,8 +68,10 @@
 
 [float]
 === 示例代码
+=== Example Code
 // Describe what the example code is all about and add relevant code   ►►►►► THIS SECTION IS MANDATORY ◄◄◄◄◄
 这个例子在7号引脚打印脉冲的时长。
+The example prints the time duration of a pulse on pin 7.
 
 [source,arduino]
 ----
@@ -84,6 +100,7 @@ void loop() {
 
 [float]
 === 查看其它
+=== See also
 
 --
 // SEE ALSO SECTION ENDS
