--- a/README.adoc
+++ b/README.adoc
@@ -1,60 +1,32 @@
-= Reference-zh_cn
 = 简体中文手册
 
 Reference-zh_cn是Arduino语言手册简体中文版的文档存储仓。 
-Reference-en is the repo for the Language Reference documentation of the Arduino syntax in **English**.  
-
 所有手册术语文件使用AsciiDoc格式。
-All the Reference terms files are in AsciiDoc format.
 
-谢谢你花时间来贡献Arduino内容，这对于整个Arduino社区很有帮助。如果你想学习更多关于如何给这个项目贡献，请阅读https://create.arduino.cc/projecthub/Arduino_Genuino/contribute-to-the-arduino-reference-af7c37[这个一步步的教程].
-Thank you for taking the time to contribute to Arduino content, this is really helpful to the whole Arduino Community. If you want to learn more about how to contribute to this project, please check https://create.arduino.cc/projecthub/Arduino_Genuino/contribute-to-the-arduino-reference-af7c37[this step by step tutorial].
+谢谢你花时间来贡献Arduino内容，这对于整个Arduino社区很有帮助。如果你想学习更多关于如何给这个项目贡献，请阅读https://create.arduino.cc/projecthub/Arduino_Genuino/contribute-to-the-arduino-reference-af7c37[这个一步步的教程]。
 
 == 内容创建和编译
-== Content Creation and Editing
 如果你想贡献新的内容，使用任意文本或代码编辑器创建一个新文件，并保存为.adoc格式。
-If you want to contribute new content, create a new file (with any text or code editor) and save it as .adoc.  
 在文件名里请不要使用括号或任何特殊字符。
-Do not use parenthesis or any special character in the file name.  
 在https://raw.githubusercontent.com/arduino/reference-en/master/AsciiDoc_sample/AsciiDoc_Dictionary/AsciiDoc_Template-Dictionary.adoc[`reference-en/AsciiDoc_sample/AsciiDoc_Dictionary`]里你将找到一个AsciiDoc语法的简介。这个包括标题、文本、链接、图片、表格、代码以及内存对象（包括视频、幻灯片、音频以及代码）。你能通过https://www.arduino.cc/reference/en/asciidoc_sample/asciidoc_dictionary/asciidoc_template-dictionary/查看一些示例效果。
-In https://raw.githubusercontent.com/arduino/reference-en/master/AsciiDoc_sample/AsciiDoc_Dictionary/AsciiDoc_Template-Dictionary.adoc[`reference-en/AsciiDoc_sample/AsciiDoc_Dictionary`] you will find an overview of the AsciiDoc syntax. This includes Titles, Text, Links, Images, Tables, Code and various embeds (video, slideshow, audio, and code). You can see it rendered https://www.arduino.cc/reference/en/asciidoc_sample/asciidoc_dictionary/asciidoc_template-dictionary/[here].
 
 如果你想贡献语言手册或者编辑存在的内容，你能在这里reference-en/AsciiDoc_sample/Reference_Terms找到两个模板：
-If you want to contribute to the Language Reference or edit existing content, you can find two templates in reference-en/AsciiDoc_sample/Reference_Terms:
-
-* Use https://raw.githubusercontent.com/arduino/reference-en/master/AsciiDoc_sample/Reference_Terms/AsciiDoc_Template-Single_Entity.adoc[`AsciiDoc_Template-Single_Entity.adoc`] (rendered https://www.arduino.cc/reference/en/asciidoc_sample/reference_terms/asciidoc_template-single_entity/[here]) for terms such as link:http://arduino.cc/en/Reference/AnalogWrite[analogWrite].
-* Use https://raw.githubusercontent.com/arduino/reference-en/master/AsciiDoc_sample/Reference_Terms/AsciiDoc_Template-Parent_Of_Entities.adoc[`AsciiDoc_Template-Parent_Of_Entities.adoc`] (rendered https://www.arduino.cc/reference/en/asciidoc_sample/reference_terms/asciidoc_template-parent_of_entities/[here]) for groups of functions such as link:http://arduino.cc/en/Reference/Serial[Serial].
+* 参考https://raw.githubusercontent.com/arduino/reference-en/master/AsciiDoc_sample/Reference_Terms/AsciiDoc_Template-Single_Entity.adoc[`AsciiDoc_Template-Single_Entity.adoc`] (rendered https://www.arduino.cc/reference/en/asciidoc_sample/reference_terms/asciidoc_template-single_entity/[这里]) 学习条款，例如 link:http://arduino.cc/en/Reference/AnalogWrite[analogWrite].
+* 参考https://raw.githubusercontent.com/arduino/reference-en/master/AsciiDoc_sample/Reference_Terms/AsciiDoc_Template-Parent_Of_Entities.adoc[`AsciiDoc_Template-Parent_Of_Entities.adoc`] (rendered https://www.arduino.cc/reference/en/asciidoc_sample/reference_terms/asciidoc_template-parent_of_entities/[here])学习函数组，例如link:http://arduino.cc/en/Reference/Serial[Serial].
 
 请注意每个手册文件应该包括至少一个描述、一些示例代码，以及其他相关信息的链接（相关信息区域）。 
-Please note that every Reference file should include at least a Description, some Example Code, and links to other relevant info (See Also section). 
-
 如果你需要向Asciidoc文件加一些图片，请在同级目录创建一个名称为attachments的文件夹。图片支持SVG和PNG格式，最大不能超过200KB大小。
-If you need to add images to the Asciidoc please create a folder called attachments in the same directory as the Asciidoc file. Images can be saved in SVG and PNG format, max size 200KB.
 
 == 在Github上贡献内容
-== Contribute Content on Github
 如果你对Git不熟悉，你能通过Github的在线接口直接贡献内容。我们上传了一篇简短的教程指导你如何做：https://create.arduino.cc/projecthub/Arduino_Genuino/contribute-to-the-arduino-reference-af7c37[请阅读！]
-
-If you are not familiar with Git you can contribute content directly on Github via their online interface. We put together a short Tutorial to show you how - https://create.arduino.cc/projecthub/Arduino_Genuino/contribute-to-the-arduino-reference-af7c37[CHECK IT OUT!]
-
 请参考这个链接 link:https://help.github.com/articles/editing-files-in-another-user-s-repository/（由Github团队编写）来学习如何编译一个.adoc文件并向Arduino团队提交一份文件变更。
-
-link:https://help.github.com/articles/editing-files-in-another-user-s-repository/[You can also follow this guide] (written by the Github team) to learn how to edit an .adoc file and propose a file change to the Arduino team.  
-
 当建议修改文件时，请参考在手册模板文件里的指导原则。
 
-When suggesting a change, please follow the guidelines described in the Reference template files.
-
 == 提交上传内容
-== Submitting a pull request
 我们很高兴你愿意向Arduino手册做出贡献：那是帮助社区的最好的途径。
-We are glad you want to contribute to the Arduino Reference: that's the best way to help the community.
-
 你的共享是添加或者修改当前的代码、描述，请在投稿前始终参考现有问题或打开新问题。
-Your contribution is adding or modifying existing code or full descriptions, please always refer to an existing issue or open a new one before contributing. 
 
 === 文件夹结构
-=== Folder Structure
 [source]
 ----
 reference-en
@@ -75,17 +47,8 @@ reference-en
 
 ----
 
-在Lanuage目录里，文件树按照同样的结构遵循链接：https://www.arduino.cc/reference/en[Arduino Reference webpage。
-
-Within the Language folder, the file tree follows the same structure as in the link:https://www.arduino.cc/reference/en[Arduino Reference webpage]
+在Lanuage目录里，文件树按照同样的结构遵循链接：https://www.arduino.cc/reference/en[Arduino Reference webpage]。
 
 === 许可证协议
-=== License
-
 请注意你的对于Arduino开发手册的贡献许可于知识共享署名-相同方式共享3.0许可证。请查看https://creativecommons.org/licenses/by-sa/3.0/cn/deed.zh。
-
-Please note that your contribution to the Arduino Reference is licensed under a Creative Commons Attribution-Share Alike 3.0 License. see https://creativecommons.org/licenses/by-sa/3.0/
-
 image:https://i.creativecommons.org/l/by-sa/3.0/88x31.png[Creative Commons License, title="知识共享协议"] 这项工作许可于链接：https://creativecommons.org/licenses/by-sa/3.0/cn/deed.zh [知识共享署名-相同方式共享3.0未移植许可证]。
-
-image:https://i.creativecommons.org/l/by-sa/3.0/88x31.png[Creative Commons License, title="Creative Commons License"] This work is licensed under a link:https://creativecommons.org/licenses/by-sa/3.0/deed.en[Creative Commons Attribution-ShareAlike 3.0 Unported License].
